--- a/.gitlab/source_test/macos.yml
+++ b/.gitlab/source_test/macos.yml
@@ -5,6 +5,8 @@ include:
 .tests_macos_gitlab:
   stage: source_test
   extends: .macos_gitlab
+  rules:
+    - !reference [.fast_on_dev_branch_only]
   needs: ["go_deps", "go_tools_deps"]
   variables:
     TEST_OUTPUT_FILE: test_output.json
@@ -29,8 +31,6 @@ include:
 
 tests_macos_gitlab_amd64:
   extends: .tests_macos_gitlab
-  rules:
-    - !reference [.fast_on_dev_branch_only]
   tags: ["macos:ventura-amd64", "specific:true"]
   after_script:
     - !reference [.vault_login]
@@ -41,8 +41,7 @@ tests_macos_gitlab_amd64:
 tests_macos_gitlab_arm64:
   extends: .tests_macos_gitlab
   rules:
-    - !reference [.manual]
-    - !reference [.fast_on_dev_branch_only]
+    !reference [.manual]
   tags: ["macos:ventura-arm64", "specific:true"]
   allow_failure: true
   after_script:
