--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -666,6 +666,13 @@ new-e2e-gpu:
     - !reference [.needs_new_e2e_template]
     - deploy_deb_testing-a7_x64                  # agent 7 debian package
 
+new-e2e-cc-test:
+  extends: .new_e2e_template
+  variables:
+    TARGETS: ./tests/cc
+    TEAM: agent-devx-loops
+  needs:
+    - !reference [.needs_new_e2e_template]
 
 generate-flakes-finder-pipeline:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
