--- a/.github/workflows/add_dependabot_pr_to_mq.yml
+++ b/.github/workflows/add_dependabot_pr_to_mq.yml
@@ -14,9 +14,15 @@
           pull-requests: write
     
         steps:
+          - uses: actions/create-github-app-token@c1a285145b9d317df6ced56c09f525b5c2b6f755 # v1.11.1
+            id: app-token
+            with:
+              app-id: ${{ vars.DD_GITHUB_TOKEN_GENERATOR_APP_ID }}
+              private-key: ${{ secrets.DD_GITHUB_TOKEN_GENERATOR_PRIVATE_KEY }}
           - name: Add Merge Comment to Pull Request
             uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
             with:
+              github-token: ${{ steps.app-token.outputs.token }}
               script: |
                 const pullRequestNumber = context.payload.pull_request.number;
                 const commentBody = "/merge";
