--- a/.github/workflows/ask_dependabot_pr_review.yml
+++ b/.github/workflows/ask_dependabot_pr_review.yml
@@ -16,6 +16,7 @@
     permissions: {}
     jobs:
        add_reviewers:
+        if: github.event.pull_request.user.login == 'dependabot[bot]'
         runs-on: ubuntu-latest
         permissions:
           pull-requests: write
@@ -35,7 +36,7 @@
           - name: Install dependencies
             run: pip install -r requirements.txt -r tasks/requirements.txt
 
-          - name: Check code review complexity
+          - name: Add reviewers and ask review
             env:
               PR_NUMBER: ${{ github.event.pull_request.number }}
             run: inv -e issue.add-reviewers -p $PR_NUMBER
