--- a/modules.yml
+++ b/modules.yml
@@ -188,7 +188,9 @@ modules:
     used_by_otel: true
   pkg/metrics:
     used_by_otel: true
+  pkg/network/payload: default
   pkg/networkdevice/profile: default
+  pkg/networkpath/payload: default
   pkg/obfuscate:
     used_by_otel: true
   pkg/orchestrator/model:
