--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -557,7 +557,7 @@ new-e2e-ndm-netflow:
     - qa_agent
   variables:
     TARGETS: ./tests/ndm/netflow
-    TEAM: network-device-monitoring
+    TEAM: ndm-integrations
 
 new-e2e-ndm-snmp:
   extends: .new_e2e_template
@@ -569,7 +569,7 @@ new-e2e-ndm-snmp:
     - qa_agent
   variables:
     TARGETS: ./tests/ndm/snmp
-    TEAM: network-device-monitoring
+    TEAM: ndm-core
 
 new-e2e-ha-agent:
   extends: .new_e2e_template_needs_deb_x64
