--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -149,7 +149,7 @@ repos:
     - id: protocol-buffer
       name: validate-protocol-buffer-generated-files
       description: Validate that the generated protocol buffer files are up to date
-      entry: 'inv protobuf-generate --no-do-mockgen'
+      entry: 'inv protobuf.generate --no-do-mockgen'
       language: system
       pass_filenames: false
       files: (.*go\.mod|modules\.yml|.*gomodules\.py|.*modules\.py|.*.proto)$
