--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -11,15 +11,6 @@ build:
   local:
     push: false
     concurrency: 0
-  artifacts:
-    - image: agent
-      custom:
-        buildCommand: "docker exec datadog_agent_devcontainer bash -c \"
-          inv agent.hacky-dev-image-build --target-image=$IMAGE\""
-    - image: clusteragent
-      custom:
-        buildCommand: "docker exec datadog_agent_devcontainer bash -c \"
-          inv cluster-agent.hacky-dev-image-build --target-image=$IMAGE\""
 deploy:
   helm:
     releases:
@@ -45,3 +36,30 @@ deploy:
             repository: "{{.IMAGE_REPO_agent}}"
             tag: "{{.IMAGE_TAG_agent}}"
             doNotCheckTag: true
+profiles:
+  - name: kind
+    activation:
+    - kubeContext: kind
+      command: dev
+    build:
+      artifacts:
+      - image: agent
+        custom:
+          buildCommand: "inv agent.hacky-dev-image-build --target-image=$IMAGE"
+      - image: clusteragent
+        custom:
+          buildCommand: "inv cluster-agent.hacky-dev-image-build --target-image=$IMAGE"
+  - name: minikube
+    activation:
+    - kubeContext: minikube
+      command: dev
+    build:
+      artifacts:
+      - image: agent
+        custom:
+          buildCommand: "docker exec datadog_agent_devcontainer bash -c \"
+            inv agent.hacky-dev-image-build --target-image=$IMAGE\""
+      - image: clusteragent
+        custom:
+          buildCommand: "docker exec datadog_agent_devcontainer bash -c \"
+            inv cluster-agent.hacky-dev-image-build --target-image=$IMAGE\""
