--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -329,7 +329,7 @@
 /comp/forwarder/orchestrator @DataDog/agent-logs
 /comp/metadata/haagent @DataDog/ndm-core
 /comp/metadata/packagesigning @DataDog/agent-delivery
-/comp/otelcol/ddprofilingextension @DataDog/opentelemetry
+/comp/otelcol/ddprofilingextension @DataDog/opentelemetry @DataDog/opentelemetry-agent
 /comp/trace/etwtracer @DataDog/windows-agent
 /comp/autoscaling/datadogclient @DataDog/container-integrations
 /comp/etw @DataDog/windows-agent
