--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -329,6 +329,7 @@
 /comp/forwarder/orchestrator @DataDog/agent-log-pipelines
 /comp/metadata/haagent @DataDog/ndm-core
 /comp/metadata/packagesigning @DataDog/agent-delivery
+/comp/otelcol/status @DataDog/opentelemetry-agent
 /comp/trace/etwtracer @DataDog/windows-agent
 /comp/autoscaling/datadogclient @DataDog/container-integrations
 /comp/etw @DataDog/windows-agent
