--- a/modules.yml
+++ b/modules.yml
@@ -275,7 +275,8 @@ modules:
     used_by_otel: true
   pkg/util/utilizationtracker:
     used_by_otel: true
-  pkg/util/uuid: default
+  pkg/util/uuid:
+    used_by_otel: true
   pkg/util/winutil:
     used_by_otel: true
   pkg/version:
