--- a/.gitlab/binary_build/cws_instrumentation.yml
+++ b/.gitlab/binary_build/cws_instrumentation.yml
@@ -5,7 +5,10 @@
   script:
     - inv check-go-version
     - inv -e cws-instrumentation.build
-    - $S3_CP_CMD $CI_PROJECT_DIR/$CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation $S3_ARTIFACTS_URI/datadog-cws-instrumentation/cws-instrumentation.$ARCH
+    - mv $CI_PROJECT_DIR/$CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation $CI_PROJECT_DIR/$CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.$ARCH
+  artifacts:
+    paths:
+      - $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.$ARCH
 
 cws_instrumentation-build_amd64:
   extends: .cws_instrumentation-build_common
