--- a/.gitlab/container_build/docker_linux.yml
+++ b/.gitlab/container_build/docker_linux.yml
@@ -231,15 +231,17 @@ docker_build_cluster_agent_amd64:
     - job: cluster_agent-build_amd64
       artifacts: true
     - job: cws_instrumentation-build_amd64
-      artifacts: false
+      artifacts: true
     - job: cws_instrumentation-build_arm64
-      artifacts: false
+      artifacts: true
   variables:
     IMAGE: registry.ddbuild.io/ci/datadog-agent/cluster-agent
     BUILD_CONTEXT: Dockerfiles/cluster-agent
   before_script:
     - !reference [.docker_build_s3, before_script]
     - cp $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $BUILD_CONTEXT/
+    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.arm64 $BUILD_CONTEXT/
+    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.amd64 $BUILD_CONTEXT/
     - cp Dockerfiles/cluster-agent/datadog-cluster.yaml $BUILD_CONTEXT/
     - cp Dockerfiles/cluster-agent/security-agent-policies $BUILD_CONTEXT/
     - cp -Rvf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
@@ -251,15 +253,17 @@ docker_build_cluster_agent_arm64:
     - job: cluster_agent-build_arm64
       artifacts: true
     - job: cws_instrumentation-build_amd64
-      artifacts: false
+      artifacts: true
     - job: cws_instrumentation-build_arm64
-      artifacts: false
+      artifacts: true
   variables:
     IMAGE: registry.ddbuild.io/ci/datadog-agent/cluster-agent
     BUILD_CONTEXT: Dockerfiles/cluster-agent
   before_script:
     - !reference [.docker_build_s3, before_script]
     - cp $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $BUILD_CONTEXT/
+    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.arm64 $BUILD_CONTEXT/
+    - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.amd64 $BUILD_CONTEXT/
     - cp Dockerfiles/cluster-agent/datadog-cluster.yaml $BUILD_CONTEXT/
     - cp Dockerfiles/cluster-agent/security-agent-policies $BUILD_CONTEXT/
     - cp -Rvf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
