--- a/.gitlab/container_build/docker_linux.yml
+++ b/.gitlab/container_build/docker_linux.yml
@@ -225,7 +225,7 @@ docker_build_ot_agent7_jmx_arm64:
 
 # build the cluster-agent image
 docker_build_cluster_agent_amd64:
-  extends: [.docker_build_job_definition_amd64, .docker_build_s3]
+  extends: [.docker_build_job_definition_amd64]
   rules: !reference [.on_tag_or_a7]
   needs:
     - job: cluster_agent-build_amd64
@@ -238,7 +238,6 @@ docker_build_cluster_agent_amd64:
     IMAGE: registry.ddbuild.io/ci/datadog-agent/cluster-agent
     BUILD_CONTEXT: Dockerfiles/cluster-agent
   before_script:
-    - !reference [.docker_build_s3, before_script]
     - cp $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $BUILD_CONTEXT/
     - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.arm64 $BUILD_CONTEXT/
     - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.amd64 $BUILD_CONTEXT/
@@ -247,7 +246,7 @@ docker_build_cluster_agent_amd64:
     - cp -Rvf Dockerfiles/agent/nosys-seccomp Dockerfiles/cluster-agent/
 
 docker_build_cluster_agent_arm64:
-  extends: [.docker_build_job_definition_arm64, .docker_build_s3]
+  extends: [.docker_build_job_definition_arm64]
   rules: !reference [.on_tag_or_a7]
   needs:
     - job: cluster_agent-build_arm64
@@ -260,7 +259,6 @@ docker_build_cluster_agent_arm64:
     IMAGE: registry.ddbuild.io/ci/datadog-agent/cluster-agent
     BUILD_CONTEXT: Dockerfiles/cluster-agent
   before_script:
-    - !reference [.docker_build_s3, before_script]
     - cp $CLUSTER_AGENT_BINARIES_DIR/datadog-cluster-agent $BUILD_CONTEXT/
     - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.arm64 $BUILD_CONTEXT/
     - cp $CWS_INSTRUMENTATION_BINARIES_DIR/cws-instrumentation.amd64 $BUILD_CONTEXT/
