--- a/Dockerfiles/cluster-agent/Dockerfile
+++ b/Dockerfiles/cluster-agent/Dockerfile
@@ -23,7 +23,7 @@ COPY entrypoint.sh .
 COPY readsecret.sh readsecret_multiple_providers.sh ./
 
 # CWS Instrumentation
-COPY --chmod=0755 ./datadog-cws-instrumentation/ opt/datadog-agent/bin/datadog-cws-instrumentation/
+COPY --chmod=0755 ./cws-instrumentation/ opt/datadog-agent/bin/datadog-cws-instrumentation/
 
 RUN apt-get update \
     && apt-get install --no-install-recommends -y adduser \
