--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -163,17 +163,17 @@ new-agent_dmg-x64-a7:
     - brew install gettext -fv || true
     - brew link --overwrite gettext || true
   script:
-    - set +e
-    - brew remove --force --ignore-dependencies gettext
-    - echo Trying git
-    - rm -rf /tmp/agentrepo
-    - git clone https://github.com/DataDog/datadog-agent.git /tmp/agentrepo
-    - find /usr -name "libintl*"
-    - find /opt -name "libintl*"
-    - echo Trying reinstall
-    - brew install gettext
-    - brew link --overwrite gettext
-    - exit 1
+    # - set +e
+    # - brew remove --force --ignore-dependencies gettext
+    # - echo Trying git
+    # - rm -rf /tmp/agentrepo
+    # - git clone https://github.com/DataDog/datadog-agent.git /tmp/agentrepo
+    # - find /usr -name "libintl*"
+    # - find /opt -name "libintl*"
+    # - echo Trying reinstall
+    # - brew install gettext
+    # - brew link --overwrite gettext
+    # - exit 1
 
     - set -e
     - !reference [.vault_login]
@@ -203,10 +203,11 @@ new-agent_dmg-x64-a7:
     # - bash .gitlab/package_build/builder_setup.sh
     # Setup
     - |
-      export INTEGRATION_WHEELS_CACHE_BUCKET=dd-agent-omnibus
-      export INTEGRATION_WHEELS_SKIP_CACHE_UPLOAD="true"
-      export S3_OMNIBUS_CACHE_BUCKET="dd-ci-datadog-agent-omnibus-cache-build-stable"
-      export S3_OMNIBUS_CACHE_ANONYMOUS_ACCESS="true"
+      # TODO A: Omnibus cache
+      # export INTEGRATION_WHEELS_CACHE_BUCKET=dd-agent-omnibus
+      # export INTEGRATION_WHEELS_SKIP_CACHE_UPLOAD="true"
+      # export S3_OMNIBUS_CACHE_BUCKET="dd-ci-datadog-agent-omnibus-cache-build-stable"
+      # export S3_OMNIBUS_CACHE_ANONYMOUS_ACCESS="true"
       export RELEASE_VERSION=$RELEASE_VERSION_7
       export AGENT_MAJOR_VERSION=7
       export PYTHON_RUNTIMES=3
