--- a/.gitlab/.pre/cancel-prev-pipelines.yml
+++ b/.gitlab/.pre/cancel-prev-pipelines.yml
@@ -51,3 +51,21 @@ cancel-prev-pipelines_docker_with_hack:
     - when: on_success
   script:
     - $CI_PROJECT_DIR/tools/ci/test_exit_code.sh | exit $?
+
+cancel-prev-pipelines-h:
+  stage: .pre
+  image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
+  tags: ["arch:amd64"]
+  rules: # this should only run on dev branches
+    - if: $CI_PIPELINE_SOURCE =~ /^schedule.*$/
+      when: never
+    - if: $CI_COMMIT_TAG
+      when: never
+    - !reference [.except_main_or_release_branch]
+    - if: $CI_COMMIT_MESSAGE =~ /.*\[skip cancel\].*/
+      when: never
+    - if: $CI_COMMIT_REF_NAME =~ /.*-skip-cancel$/
+      when: never
+    - when: on_success
+  script:
+    - $CI_PROJECT_DIR/tools/ci/test_exit_code.sh | exit $?
