--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -165,6 +165,7 @@ new-agent_dmg-x64-a7:
   after_script:
     - brew install gettext -fv || true
     - brew link --overwrite gettext || true
+
   script:
     # - set +e
     # - brew remove --force --ignore-dependencies gettext
@@ -178,6 +179,24 @@ new-agent_dmg-x64-a7:
     # - brew link --overwrite gettext
     # - exit 1
     - set -e
+
+    - |
+      echo Removing preinstalled environment
+      # brew remove --force --ignore-dependencies --formula aria2
+      # # TODO: brew remove --force --ignore-dependencies --formula git
+      # brew remove --force --ignore-dependencies --formula libidn2
+      # brew remove --force --ignore-dependencies --formula wget
+      brew remove --force --ignore-dependencies --formula gettext
+
+    - |
+      debug()
+      {
+        echo Searching for libintl
+        sudo find /usr -name "libintl*" || true
+        sudo find /opt -name "libintl*" || true
+      }
+      echo After preinstall removal
+      debug
 
     # Install custom git to avoid libintl dependencies provided by gettext
     - |
@@ -196,20 +215,19 @@ new-agent_dmg-x64-a7:
         make all -j 4
         echo Git Built
 
-        ./git --version
-
-        # TODO: Install
+        # TODO A: Install?
         # sudo make install -j 4
-        # echo Git $GIT_VERSION Installed
 
-        # which git
-        # git --version
+        ./git --version
       }
+      echo Installing git
       install_git
     - |
       PATH="$PWD/git-$GIT_VERSION:$PATH"
       which git
-    - echo 'Git installed!'
+    - |
+      echo After git install
+      debug
     - exit
 
     - set -e
